--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
     <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/Tegel.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
 
 </head>
 <body>
     <header>
+        <a class="pijl" href="index.html">
+            <span class="material-symbols-outlined">
+                arrow_back
+                </span>
+        </a>
         <h1>EAR TRAINING</h1>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
