--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M2.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feel the Chords Module 1</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M1.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M2.css">
 
 
 </head>
@@ -19,60 +19,60 @@
     </header>
     <main>
         <section id='steezy'>
-            <h2>Module 1</h2>
+            <h2>Module 2</h2>
         </section>
         <section id="steezy">
-            <h2>Are they chords 1 and 4 or 1 and 5 </h2>
+            <h2>Chords 1,4 and 5 </h2>
         </section>
 
         <div class="lesson-block">
             <p>Track 1</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 01 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 1 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 2</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 02 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 2 - Chords 1, 4 and 5.mp3"></audio>
         </div>
 
         <div class="lesson-block">
             <p>Track 3</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 03 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 3 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 4</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 04 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 4 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 5</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 05 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 5 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 6</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 06 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 6 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 7</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 07 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 7 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 8</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 08 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 8 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 9</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 09 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 9 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 10</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 10 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 10 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 11</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 11 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 11 - Chords 1, 4 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 12</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 12 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson2/Lesson 05 - Feel the Chords 12 - Chords 1, 4 and 5.mp3"></audio>
         </div>
 
     </main>
