--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M1.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M1.html
@@ -27,7 +27,7 @@
 
         <div class="lesson-block">
             <p>Track 1</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 01 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 01 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 2</p>
