--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M1.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M1.html
@@ -31,48 +31,48 @@
         </div>
         <div class="lesson-block">
             <p>Track 2</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 02 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 02 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
 
         <div class="lesson-block">
             <p>Track 3</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 03 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 03 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 4</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 04 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 04 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 5</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 05 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 05 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 6</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 06 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 06 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 7</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 07 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 07 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 8</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 08 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 08 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 9</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 09 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 09 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 10</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 10 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 10 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 11</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 11 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 11 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Track 12</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the numbers _Feel the Chords/Audio/Lesson 03 - Feel the Chords 12 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson 03 - Feel the Chords 12 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
         </div>
 
     </main>
