--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html
@@ -21,19 +21,19 @@
         </section>
         <div id="links-container">
             <section>
-            <a class="link" href="M1.html">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M1.html">
                 <img src="Afbeeldingen/M1.webp">
                 <span>Module 1</span>
             </a>
             </section>
             <section>
-                <a class="link" href="M2.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M2.html">
                     <img src="Afbeeldingen/M2.webp">
                     <span>Module 2</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M3.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M3.html">
                     <img src="Afbeeldingen/M3.webp">
                     <span>Module 3</span>
                 </a>
