--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4.html
@@ -21,7 +21,7 @@
         </section>
 
         <div class="lesson-block">
-            <p>Track 1</p>
+            <p>Studying chords 1 and 4</p>
             <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Song analysis - Walk on the Wild Side.mp4"></video>
         </div>
         <div class="lesson-block">
@@ -71,6 +71,10 @@
         <div class="lesson-block">
             <p>Track 12</p>
             <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson3 - Feel the Chords 12 - Are they chords 1 and 4 or chords 1 and 5.mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>Song analysis: Walk on the Wild Side</p>
+            <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Song analysis - Walk on the Wild Side.mp4"></video>
         </div>
     </main>
 </body>
