--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -65,7 +65,7 @@
             </section>
             <div id="links-container">
                 <section>
-                    <a class="link" href="">
+                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html">
                         <img src="Afbeeldingen/TM.webp" alt="Tonal Map" height="200" width="200">
                         <span>Tonal Map</span>
                     </a>
