--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html
@@ -26,11 +26,55 @@
         </section>
 
         <div class="lesson-block">
-            <p>Track 1</p>
+            <p>key of A</p>
             <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of A).mp3"></audio>
         </div>
+        <div class="lesson-block">
+            <p>key of Ab</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of Ab).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of B</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of B).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of Bb</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of Bb).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of C</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of C).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of D</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of D).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of Db</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of Db).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of E</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of E).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of Eb</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of Eb).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of F</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of F).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of G</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of G).mp3"></audio>
+        </div>
+        <div class="lesson-block">
+            <p>key of Gb</p>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of Gb).mp3"></audio>
+        </div>
   
-        /Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Chords 1 and 4 - Piano Ballad/Chords 1 and 4 - Piano Ballad (key of A).mp3
+        
 
     </main>
 </body>
