--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melody Path</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/Tegel.css">
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/M4Tegel.css">
 </head>
 <body>
     <Header>
@@ -17,27 +17,41 @@
     </Header>
     <main>
         <section>
-            <h2>Sing The numbers</h2>
+            <h2>Akkoorden herkennen: 1 en 4</h2>
         </section>
+        <div id="media-container">
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <span>Les 1 Deel 1</span>
+            </div>
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <span>Les 1 Deel 2</span>
+            </div>
+            <div class="media-item">
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <span>Les 1 Deel 3</span>
+            </div>
+        </div>
         <div id="links-container">
             <section>
-            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M1.html">
-                <img src="Afbeeldingen/M1.webp">
-                <span>Module 1</span>
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4">
+                <video controls scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <span>Les 1 Deel 1</span>
             </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M2.html">
-                    <img src="Afbeeldingen/M2.webp">
-                    <span>Module 2</span>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4">
+                    <video controls scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                    <span>Les 1 Deel 2</span>
                 </a>
-            </section>
-            <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M3.html">
-                    <img src="Afbeeldingen/M3.webp">
-                    <span>Module 3</span>
-                </a>
-            </section>
+                </section>
+                <section>
+                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4">
+                        <video controls scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                        <span>Les 1 Deel 3</span>
+                    </a>
+                    </section>
             <section>
                 <a class="link" href="M4.html">
                     <img src="Afbeeldingen/M4.webp">
