--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
@@ -19,39 +19,24 @@
         <section>
             <h2>Akkoorden herkennen: 1 en 4</h2>
         </section>
+        <h2>Les 1</h2>
         <div id="media-container">
+
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                <span>Les 1 Deel 1</span>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 deel 1comp.mp4"></video>
+                <span>Deel 1</span>
             </div>
             <div class="media-item">
                 <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                <span>Les 1 Deel 2</span>
+                <span>Deel 2</span>
             </div>
             <div class="media-item">
                 <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                <span>Les 1 Deel 3</span>
+                <span>Deel 3</span>
             </div>
         </div>
         <div id="links-container">
-            <section>
-            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4">
-                <video controls scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                <span>Les 1 Deel 1</span>
-            </a>
-            </section>
-            <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4">
-                    <video controls scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                    <span>Les 1 Deel 2</span>
-                </a>
-                </section>
-                <section>
-                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4">
-                        <video controls scr="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
-                        <span>Les 1 Deel 3</span>
-                    </a>
-                    </section>
+ 
             <section>
                 <a class="link" href="M4.html">
                     <img src="Afbeeldingen/M4.webp">
