--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
@@ -35,18 +35,19 @@
                 <span>Deel 3</span>
             </div>
         </div>
+        <h2>Mudules</h2>
         <div id="links-container">
  
             <section>
-                <a class="link" href="M4.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4PianoBalled.html">
                     <img src="Afbeeldingen/M4.webp">
-                    <span>Module 4</span>
+                    <span>Piano Ballad</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M5.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4CounrtyWaltz.html">
                     <img src="Afbeeldingen/M5.webp">
-                    <span>Module 5</span>
+                    <span>Counrty Waltz</span>
                 </a>
             </section>
             <section>
