--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html
@@ -27,11 +27,11 @@
                 <span>Deel 1</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 deel 2comp.mp4"></video>
                 <span>Deel 2</span>
             </div>
             <div class="media-item">
-                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/SA.mp4"></video>
+                <video controls src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson4/Lesson 1 deel 3comp.mp4"></video>
                 <span>Deel 3</span>
             </div>
         </div>
