--- a/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html
+++ b/Main index/eartraining/FeelTheNumbers_FeelTheChords/index.html
@@ -39,7 +39,7 @@
                 </a>
             </section>
             <section>
-                <a class="link" href="M4.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M4Index.html">
                     <img src="Afbeeldingen/M4.webp">
                     <span>Module 4</span>
                 </a>
